Update index.html: tambah pilihan Tema 3 Redesign Konten Eksisting

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f7f9fa;}
-    .container { max-width:550px; margin:50px auto; background:#fff; border-radius:12px; box-shadow:0 2px 10px #0001; padding:32px;}
+    .container { max-width:650px; margin:50px auto; background:#fff; border-radius:12px; box-shadow:0 2px 10px #0001; padding:32px;}
     h1 { text-align:center; color:#02577a; margin-bottom:24px;}
     ul { list-style:none; padding:0;}
     li { margin-bottom:18px; }
-    a { text-decoration:none; color:#007bff; font-size:1.12em; font-weight:bold;}
+    a { text-decoration:none; color:#007bff; font-size:1.06em; font-weight:bold;}
     a:hover { color:#02577a;}
-    .desc { color:#444; font-size:0.98em; margin-left:8px;}
+    .desc { color:#444; font-size:0.95em; margin-left:8px; display:block; margin-top:4px;}
   </style>
 </head>
 <body>
@@ -26,6 +26,10 @@
       <li>
         <a href="bekasi_home_model2.html" target="_blank">Tema 2: Modern & Interaktif</a>
         <span class="desc">Desain modern, grid, interaktif, card</span>
+      </li>
+      <li>
+        <a href="bekasi_home_redesign.html" target="_blank">Tema 3: Redesign Berbasis Konten Eksisting</a>
+        <span class="desc">Struktur dan isi mengikuti portal eksisting (tanpa fitur baru), tampilan diperbarui</span>
       </li>
     </ul>
   </div>
